--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -35,6 +35,27 @@ ul {
 	margin-left: 35vw;
 }
 
+.logout {
+  background-color: #ED2525;
+  color: white;
+}
+
+.logout:hover {
+  background-color: #BF2222 !important;
+}
+
+.logout a {
+  color: white !important;
+}
+
+.logout a:hover {
+  background-color: #BF2222 !important;
+}
+
+.error {
+  color: red !important;
+}
+
 /*    --------------------------------------------------
 	:: Login Section
 	-------------------------------------------------- */
@@ -121,4 +142,25 @@ ul {
 .btn-custom:hover,
 .btn-custom:focus {
     color: #fff;
+}
+
+#btn-login{
+  border: 2px solid #1fa67b;
+  background-color: white;
+  color: #1fa67b;
+  transition: background-color 0.3s ease;
+  transition: color 0.3s ease;
+}
+
+#btn-login:hover{
+	background-color: #1fa67b;
+	color: white;
+}
+
+#key, #email{
+	border: 1px solid black !important;
+}
+
+input{
+	border-radius: 1px !important;
 }
