Added signup functionality

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -157,6 +157,19 @@ ul {
 	color: white;
 }
 
+#btn-signup{
+  border: 2px solid #1F82A6;
+  background-color: white;
+  color: #1F82A6;
+  transition: background-color 0.3s ease;
+  transition: color 0.3s ease;
+}
+
+#btn-signup:hover{
+  background-color: #1F82A6;
+  color: white;
+}
+
 #key, #email{
 	border: 1px solid black !important;
 }
